--- a/DockerDesktopSample/DockerDesktopSample.csproj
+++ b/DockerDesktopSample/DockerDesktopSample.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Docker.DotNet" Version="3.125.15" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\CoreLib\CoreLib\CoreLib.csproj" />
   </ItemGroup>
 
